--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
     "version": 2,
-    "builds": [{"src": "server.js", "use": "@vercel/node"}],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "server.js"
-        }
-    ]
+    "builds": [{"src": "api/server.js", "use": "@vercel/node"}]
 }
