--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
     "version": 2,
-    "builds": [{"src": "api/server.js", "use": "@vercel/node"}]
+    "builds": [
+        {
+            "src": "api/server.js",
+            "use": "@vercel/node"
+        }
+    ]
 }
