--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,20 @@
 {
     "version": 2,
-    "builds": [{"src": "./server.js", "use": "@vercel/node"}],
+    "builds": [
+      { "src": "api/server.js", "use": "@vercel/node" },
+      { "src": "index.html", "use": "@vercel/static" },
+      { "src": "app.js", "use": "@vercel/static" },
+      { "src": "styles.css", "use": "@vercel/static" }
+    ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/api/(.*)",
+        "dest": "/api/server.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
-}
+  }
+  
