--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,14 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "api/server.js", "use": "@vercel/node" },
-      { "src": "index.html", "use": "@vercel/static" },
-      { "src": "app.js", "use": "@vercel/static" },
-      { "src": "styles.css", "use": "@vercel/static" }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/server.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }
-  
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
+  ]
+}
