--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
   "builds": [
     {
-      "src": "server.js",
+      "src": "api/server.js",
       "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
   ]
-
 }
